--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,17 @@ thymeleaf:
     suffix: .html
     encoding: UTF-8
     mode: HTML5
+coindesk:
+  api:
+    url: https://api.coindesk.com/v1/bpi/currentprice.json
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/hank
+    username: hank
+    password: 
+    driver-class-name: org.postgresql.Driver
+jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
